# Msc-Dessertation-3114556F

./: .env.example  LICENSE  README.md  biored.py  main.py  pyproject.toml  requirements.txt  scorer.py
agent/: config.py  models.py  prompts.py  run_agent.py  workflow.py
agent/utils/: bert_span_extractor.py  common_agent_utils.py  find_occurences.py  overseer_utils.py  pattern_matching.py  rare_agent_utils.py  rate_budget.py
dataset/dev/: Dev.BioC.JSON
gli_ner_bert/: predict.py  tune_threshold.py
llm/: predict.py  prompt.py
pubmedbert/: predict.py  train.py
