[project]
name = "biomedical-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "gliner>=0.2.24",
    "groq>=0.37.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "seqeval>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
